split list test into 2 tests